--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
 #sign-up {
     position: relative;
 }
+
+table, tr {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+
+table tr:nth-child(even) {
+    background-color: lightgoldenrodyellow;
+}
+
+table tr:nth-child(odd) {
+    background-color: lightcyan
+}
